--- a/jwebppy/src/main/resources/templates/portal/layout/common/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/common/fragments/js.html
@@ -7,13 +7,15 @@
 <script th:src="@{/portal/js/moment/moment.min.js}"></script>
 
 <!-- custom javascript library -->
-<script th:src="@{/portal/js/portal.utils.object.js}"></script>
-<script th:src="@{/portal/js/portal.utils.string.js}"></script>
-<script th:src="@{/portal/js/portal.utils.number.js}"></script>
-<script th:src="@{/portal/js/portal.utils.date.js}"></script>
-<script th:src="@{/portal/js/portal.utils.dateformat.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.object.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.string.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.number.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.ajax.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.download.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.dateformat.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.path.js}"></script>
+<script th:src="@{/portal/js/portal.utils.calendar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.progressbar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
 <script th:src="@{/portal/js/portal.utils.popup.js}"></script>
 <script th:src="@{/portal/js/portal.utils.modal.js}"></script>
-<script th:src="@{/portal/js/portal.utils.path.js}"></script>
