--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/js.html
@@ -2,6 +2,7 @@
 <script th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
 <script th:src="@{/platform/js/jquery/jquery-ui.min.js}"></script>
 <script th:src="@{/platform/js/jquery/jquery.tablesort.min.js}"></script>
+<script th:src="@{/platform/js/jquery/jquery.fileDownload.js}"></script>
 <script th:src="@{/platform/js/semantic/semantic.min.js}"></script>
 <script th:src="@{/platform/js/semantic/calendar.min.js}"></script>
 <script th:src="@{/platform/js/moment/moment.min.js}"></script>
@@ -12,6 +13,7 @@
 <script th:src="@{/platform/js/jWebppy.utils.object.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.number.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.security.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.ajax.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.download.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.dateformat.js}"></script>
