--- a/jwebppy/src/main/resources/templates/portal/layout/common/fragments/css.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/common/fragments/css.html
@@ -2,3 +2,4 @@
 <link rel="stylesheet" type="text/css" th:href="@{/portal/js/datatables/datatables.min.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/portal/js/datatables/datatables.custom.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/portal/css/basic.css}" />
+<link rel="stylesheet" type="text/css" th:href="@{/portal/css/semantic/semantic.min.css}" />
