--- a/jwebppy/src/main/resources/templates/portal/layout/common/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/common/fragments/js.html
@@ -1,5 +1,6 @@
 <script th:src="@{/portal/js/jquery/jquery.min.js}"></script>
 <script th:src="@{/portal/js/jquery/jquery-ui.min.js}"></script>
+<script th:src="@{/portal/js/jquery/jquery.fileDownload.js}"></script>
 <script th:src="@{/portal/js/throttle/jquery.ba-throttle-debounce.min.js}"></script>
 <script th:src="@{/portal/js/datatables/jqueryDefault.js}"></script>
 <script th:src="@{/portal/js/datatables/datatables.min.js}"></script>
@@ -10,12 +11,14 @@
 <script th:src="@{/portal/js/jWebppy.utils.object.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.string.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.number.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.security.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.ajax.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.download.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.dateformat.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.path.js}"></script>
+<script th:src="@{/portal/js/jWebppy.ui.popup.js}"></script>
 <script th:src="@{/portal/js/portal.utils.calendar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.progressbar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
-<script th:src="@{/portal/js/portal.utils.popup.js}"></script>
 <script th:src="@{/portal/js/portal.utils.modal.js}"></script>
+<script th:src="@{/portal/js/semantic/semantic.min.js}"></script>
