--- a/jwebppy/src/main/resources/templates/portal/layout/common/fragments/meta.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/common/fragments/meta.html
@@ -2,3 +2,5 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="-1" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
+<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}" />
