--- a/jwebppy/src/main/resources/templates/portal/layout/popup/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/popup/fragments/js.html
@@ -1,5 +1,6 @@
 <script th:src="@{/portal/js/jquery/jquery.min.js}"></script>
 <script th:src="@{/portal/js/jquery/jquery-ui.min.js}"></script>
+<script th:src="@{/portal/js/jquery/jquery.fileDownload.js}"></script>
 <script th:src="@{/portal/js/throttle/jquery.ba-throttle-debounce.min.js}"></script>
 <script th:src="@{/portal/js/datatables/jqueryDefault.js}"></script>
 <script th:src="@{/portal/js/datatables/datatables.min.js}"></script>
@@ -7,13 +8,16 @@
 <script th:src="@{/portal/js/moment/moment.min.js}"></script>
 
 <!-- custom javascript library -->
-<script th:src="@{/portal/js/portal.utils.object.js}"></script>
-<script th:src="@{/portal/js/portal.utils.string.js}"></script>
-<script th:src="@{/portal/js/portal.utils.number.js}"></script>
-<script th:src="@{/portal/js/portal.utils.date.js}"></script>
-<script th:src="@{/portal/js/portal.utils.dateformat.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.object.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.string.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.number.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.security.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.ajax.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.download.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.dateformat.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.path.js}"></script>
+<script th:src="@{/portal/js/portal.utils.calendar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.progressbar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
 <script th:src="@{/portal/js/portal.utils.popup.js}"></script>
 <script th:src="@{/portal/js/portal.utils.modal.js}"></script>
-<script th:src="@{/portal/js/portal.utils.path.js}"></script>
