산차부품포탈개발

--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/parts_info.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/parts_info.html
@@ -83,7 +83,7 @@
 			<td id="KONDM"></td>			
 		</tr>
 		<tr>
-			<th th:text="#{HQPD_L_SUPPLY_PARTS_NO}"></th><!-- Supply Parts No. -->
+			<th th:text="#{HQPD_L_SUPPLY_PART_NO}"></th><!-- Supply Parts No. -->
 			<td>				
 				<div id="AREA_subItem" style="display:none;">			
 				<span id="REPNR" class="custom-ui"></span>
