--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/order_form.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/order_form.html
@@ -25,7 +25,7 @@
 	<!-- Modal for upload simulation -->
 
 	<div class="block-header">
-		<div class="block-title" th:text="#{DIVEU_T_0042}"></div>
+		<div class="block-title" th:text="#{HQPD_T_ORDER_CREATE}"></div>
 		<div class="block-button-area">
 			<button id="BTN_create" type="button" th:text="#{HQPD_B_CREATE}"></button>
 			<button id="BTN_shoppingCart" type="button" th:text="#{HQPD_B_SHOPPING_CART}"></button>
@@ -697,7 +697,7 @@
 						return '<button class="btn-popup" type="button" onclick="showSearchPartsPopup(this)"></button><input type="text" name="materialNo" class="custom-ui" value="' + row.materialNo + '" tabindex="' + tabIndex++ + '" ' + row.disabled + ' onchange="syncInput(this)">';// FixedColumns 사용시엔 syncInput 호출 필요함.
 					}
 				},
-				{name: "supplyMaterialNo", data: "supplyMaterialNo", title: "[[#{HQPD_L_SUPPLY_PARTS_NO}]]", width: 200},//Supply Part No
+				{name: "supplyMaterialNo", data: "supplyMaterialNo", title: "[[#{HQPD_L_SUPPLY_PART_NO}]]", width: 200},//Supply Part No
 				{name: "description", data: "description", title: "[[#{HQPD_L_DESCRIPTION}]]"},//Description
 				{
 					name: "orderQty",
