--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order_view_inc.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order_view_inc.html
@@ -8,8 +8,8 @@
 	<div class="block-header">
 		<div class="block-title" th:text="#{HQPD_T_ORDER_DETAIL}"></div>
 		<div id="BTN_search" class="block-button-area">
-			<button id="BTN_pdfDownload" th:text="#{HQPD_B_PDF_DOWNLOAD}"></button>
-			<button id="BTN_back" th:text="#{HQPD_B_BACK}"></button>
+			<button id="BTN_pdfDownload" type="button" th:text="#{HQPD_B_PDF_DOWNLOAD}"></button><!-- PDF Download -->
+			<button id="BTN_back" type="button" th:text="#{HQPD_B_BACK}"></button><!-- Back -->
 		</div>
 	</div>
 	
@@ -17,25 +17,25 @@
 	<table class="condition table-fixed">
 		<tbody>
 			<tr>
-				<th th:text="#{HQPD_L_ORDER_TYPE}" style="width: 170px"></th><!-- Order Type -->
+				<th th:text="#{HQPD_L_ORDER_TYPE}"></th>
 				<td id="KONDA_TEXT"></td>
-				<th th:text="#{HQPD_L_SHIP_TO_PARTY}" style="width: 170px"></th><!-- Ship To Party -->
+				<th th:text="#{HQPD_L_SHIP_TO_PARTY}">
 				<td id="KUNAG_NAME"></td>
 			</tr>
 			<tr>
-				<th th:text="#{HQPD_L_PO_NO}"></th><!-- Customer P.O. Number -->
+				<th th:text="#{HQPD_L_PO_NO}"></th>
 				<td id="BSTNK"></td>
-				<th th:text="#{HQPD_L_SHIPPING_INFO}"></th><!-- Shipping Info -->
+				<th th:text="#{HQPD_L_SHIPPING_INFO}"></th>
 				<td id="VSBED_TX"></td>
 			</tr>
 			<tr>
-				<th th:text="#{HQPD_L_RDD}"></th><!-- Request Delivery Date -->
+				<th th:text="#{HQPD_L_RDD}"></th>
 				<td id="VDATU"></td>
-				<th th:text="#{HQPD_L_COMPLETE_DELIVERY}"></th><!-- Complete Delivery -->
+				<th th:text="#{HQPD_L_COMPLETE_DELIVERY}"></th>
 				<td id="COMPLETE_DELIVERY"></td>
 			</tr>
 			<tr>
-				<th th:text="#{HQPD_L_REMARKS}"></th><!-- Remarks -->				
+				<th th:text="#{HQPD_L_REMARKS}"></th>				
 				<td colspan="3" id="remark"></td>
 			</tr>
 		</tbody>
@@ -85,7 +85,7 @@ $(function(){
 	let customerType = "[[${erpUserInfo.get("TYPE")}]]";
 	
 	$.ajax({
-		url: "/portal/scm/parts/domestic/order/display/order_detail/data",		
+		url: "/portal/iv/hq/parts/domestic/order/display/order_view/data",		
 		data: {"orderNo": "[[${orderNo}]]"},
 	    success: function(response, textStatus, jqXHR) 
 	    {
@@ -111,20 +111,22 @@ $(function(){
 	    	$("#TOTAL_WEIGHT").html(mainHeadResult.TOTAL_WEIGHT + " " + mainHeadResult.GEWEI);
 	    	
 	    	$tableObj = $("#TBL_grid").DataTable({
-	    		select: true,// row 선택 기능 켬
+	    		select: {
+	    			selector: "td:not(.noselect)"// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
+	    	    },
 	    		ordering: true,// 정렬 기능 켬
 	    		scrollY: 100,
 	    		columns : [
 	    			{data: "VBELN", title: "[[#{HQPD_L_ORDER_NO}]]"},//Order No.
-	    			{data: "ITEM", title: "[[#{HQPD_L_ITEM}]]"},//Item
+	    			{data: "ITEM", title: "[[#{HQPD_L_LINE_ITEM}]]"},//Item
 	    			{data: "MATERIAL_ENT", title: "[[#{HQPD_L_ORDER_PART_NO}]]"},//Order Part No.
 	    			{data: "MATERIAL", title: "[[#{HQPD_L_SUPPLY_PART_NO}]]"},//Supply Part No
 	    			{data: "MATERIAL_TEXT", title: "[[#{HQPD_L_DESCRIPTION}]]"},//Description
 	    			{data: "REQ_QTY", title: "[[#{HQPD_L_REQ_QTY}]]"},//Req Qty
 	    			{data: "LOT_QTY", title: "[[#{HQPD_L_SALES_LOT}]]"},//Sales Lot
 	    			{data: "UOM", title: "[[#{HQPD_L_UOM}]]"},//UoM
-	    			{data: "NET_PRICE", title: "[[#{HQPD_L_NET_PRICE}]]"},//Net Price
-	    			{data: "NET_VALUE", title: "[[#{HQPD_L_NET_VALUE}]]"},//Net Value
+	    			{data: "NET_PRICE", title: "[[#{HQPD_L_NET_PRICE}]]", className: "right"},//Net Price
+	    			{data: "NET_VALUE", title: "[[#{HQPD_L_NET_VALUE}]]", className: "right"},//Net Value
 	    			{data: "AVAILABILITY", title: "[[#{HQPD_L_AVAILABILITY}]]"}//Available
 	    		],
 	    		columnDefs: [
@@ -142,16 +144,16 @@ $(function(){
 	});
 
 	$("#BTN_pdfDownload").on("click", function() {
-		document.location.href = "/portal/scm/parts/domestic/order/display/pdf_download?orderNo=[[${orderNo}]]&mode=Y006";
+		document.location.href = "/portal/iv/hq/parts/domestic/order/display/pdf_download?orderNo=[[${orderNo}]]&mode=Y006";
 	});
 
 	$("#BTN_back").on("click", function() {
-		$("#FORM_search").attr("action", "/portal/scm/parts/domestic/order/display/order_list").submit();
+		$("#FORM_search").attr("action", "/portal/iv/hq/parts/domestic/order/display/order_list").submit();
 	});
 
 	$("#BTN_download").on("click", function() {
 		let gridFileDownload = new GridFileDownload($tableObj);
-		gridFileDownload.fileName = "order_list";
+		gridFileDownload.fileName = "Order_List";
 		gridFileDownload.excelDownload();
 	});
 });
