--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quotation_view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quotation_view.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
@@ -8,11 +8,11 @@
 	<script th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
 
 	<div class="block-header">
-		<div class="block-title" th:text="#{DIVEU_TXT_0047}"></div>
+		<div class="block-title" th:text="#{HQPD_T_INQUIRY_DETAIL}"></div>
 		<div id="BTN_search" class="block-button-area">
-			<button id="BTN_transfer" th:text="#{DIVEU_BTN_0028}"></button>
-			<button id="BTN_pdfDownload" th:text="#{DIVEU_BTN_0008}"></button>
-			<button id="BTN_back" th:text="#{DIVEU_BTN_0004}"></button>
+			<button id="BTN_transfer" th:text="#{HQPD_B_TRANSFER_TO_ORDER}"></button><!-- Transfer -->
+			<button id="BTN_pdfDownload" th:text="#{HQPD_B_PDF_DOWNLOAD}"></button><!-- PDF Download -->
+			<button id="BTN_back" th:text="#{HQPD_B_BACK}"></button><!-- Back -->
 		</div>
 	</div>
 	
@@ -20,25 +20,25 @@
 	<table class="condition">
 		<tbody>
 			<tr>
-				<th th:text="#{DIVEU_LB_0014}"></th><!-- Order Type -->
+				<th th:text="#{HQPD_L_ORDER_TYPE}"></th><!-- Order Type -->
 				<td id="KONDA_TEXT"></td>
-				<th th:text="#{DIVEU_LB_0022}"></th><!-- Ship To Party -->
+				<th th:text="#{HQPD_L_SHIP_TO_PARTY}"></th><!-- Ship To Party -->
 				<td id="KUNAG_NAME"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0023}"></th><!-- Customer P.O. Number -->
+				<th th:text="#{HQPD_L_PO_NO}"></th><!-- Customer P.O. Number -->
 				<td id="BSTNK"></td>
-				<th th:text="#{DIVEU_LB_0027}"></th><!-- Shipping Info -->
+				<th th:text="#{HQPD_L_SHIPPING_INFO}"></th><!-- Shipping Info -->
 				<td id="VSBED_TX"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0024}"></th><!-- Request Delivery Date -->
+				<th th:text="#{HQPD_L_RDD}"></th><!-- Request Delivery Date -->
 				<td id="VDATU"></td>
-				<th th:text="#{DIVEU_LB_0025}"></th><!-- Complete Delivery -->
+				<th th:text="#{HQPD_L_COMPLETE_DELIVERY}"></th><!-- Complete Delivery -->
 				<td id="COMPLETE_DELIVERY"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0026}"></th><!-- Remarks -->				
+				<th th:text="#{HQPD_L_REMARKS}"></th><!-- Remarks -->				
 				<td colspan="3" id="remark"></td>
 			</tr>
 		</tbody>
@@ -48,18 +48,18 @@
 	
 	<div class="grid-info">
 		<div class="block-button-area">
-			<button id="BTN_download" th:text="#{DIVEU_BTN_0003}"></button>
+			<button id="BTN_download" th:text="#{HQPD_B_DOWNLOAD}"></button>
 		</div>	
 		<div class="grid-total">
-			<span th:text="#{DIVEU_TXT_0024}"></span>
+			<span th:text="#{HQPD_T_TOTAL_AMOUNT}"></span>
 			<div class="split"></div>
 			<span class="total-number" id="NETWR"></span>
 			<div class="split2"></div>
-			<span th:text="#{DIVEU_TXT_0025}"></span>
+			<span th:text="#{HQPD_T_CREDIT}"></span>
 			<div class="split"></div>
 			<span class="total-number" id="CREDIT"></span>
 			<div class="split2"></div>
-			<span th:text="#{DIVEU_TXT_0026}"></span>
+			<span th:text="#{HQPD_T_ESTIMATE_WEIGHT}"></span>
 			<div class="split"></div>
 			<span class="total-number" id="TOTAL_WEIGHT"></span>
 		</div>
@@ -69,7 +69,7 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 	
-	<form id="FORM_search" name="FORM_search" action="/portal/corp/eu/scm/parts/order/display/inquiry_list">
+	<form id="FORM_search" name="FORM_search" action="/portal/iv/hq/parts/domestic/order/display/quotation_list">
 		<input type="hidden" name="pDocType" th:value="${pDocType}">
 		<input type="hidden" name="pOrderType" th:value="${pOrderType}">
 		<input type="hidden" name="pOrderNo" th:value="${pOrderNo}">
@@ -88,16 +88,16 @@
 
 $(function(){
 	$.ajax({
-		url: "/portal/corp/eu/scm/parts/order/display/inquiry_detail/data",		
+		url: "/portal/iv/hq/parts/domestic/order/display/quotation_view/data",		
 		data: {"orderNo": "[[${orderNo}]]", "docType": "[[${pDocType}]]"},
 	    success: function(response, textStatus, jqXHR) 
 	    {
-	    	var result = response.RESULT;
+	    	let result = response.RESULT;
 	    	
-	    	var first = result.first;
-	    	var mainHeadResult = result.mainHeadResult;
-	    	var general = result.general;
-	    	var item = result.item;
+	    	let first = result.first;
+	    	let mainHeadResult = result.mainHeadResult;
+	    	let general = result.general;
+	    	let item = result.item;
 	    	
 	    	$("#KONDA_TEXT").html(mainHeadResult.KONDA_TEXT);
 	    	$("#KUNAG_NAME").html(mainHeadResult.KUNAG_NAME);
@@ -111,20 +111,22 @@ $(function(){
 	    	$("#TOTAL_WEIGHT").html(mainHeadResult.TOTAL_WEIGHT + " " + mainHeadResult.GEWEI);
 	    	
 	    	$tableObj = $("#TBL_grid").DataTable({
-	    		select: true,// row 선택 기능 켬
+	    		select: {
+	    			selector: "td:not(.noselect)"// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
+	    	    },
 	    		ordering: true,// 정렬 기능 켬
 	    		scrollY: 100,
 	    		columns : [
-	    			{data: "VBELN", title: "[[#{DIVEU_LB_0013}]]"},//Order No.
-	    			{data: "ITEM", title: "[[#{DIVEU_LB_0028}]]"},//Item
-	    			{data: "MATERIAL_ENT", title: "[[#{DIVEU_LB_0029}]]"},//Order Part No.
-	    			{data: "MATERIAL", title: "[[#{DIVEU_LB_0030}]]"},//Supply Part No
-	    			{data: "MATERIAL_TEXT", title: "[[#{DIVEU_LB_0031}]]"},//Description
-	    			{data: "REQ_QTY", title: "[[#{DIVEU_LB_0032}]]"},//Req Qty
-	    			{data: "KBETR", title: "[[#{DIVEU_LB_0033}]]"},//List Price
-	    			{data: "NET_PRICE", title: "[[#{DIVEU_LB_0034}]]"},//Net Price
-	    			{data: "NET_VALUE", title: "[[#{DIVEU_LB_0035}]]"},//Net Value
-	    			{data: "AVAILABILITY", title: "[[#{DIVEU_LB_0036}]]"}//Available
+	    			{data: "VBELN", title: "[[#{HQPD_L_QUOTATION_NO}]]"},//Order No.
+	    			{data: "ITEM", title: "[[#{HQPD_L_LINE_ITEM}]]"},//Item
+	    			{data: "MATERIAL_ENT", title: "[[#{HQPD_L_ORDER_PART_NO}]]"},//Order Part No.
+	    			{data: "MATERIAL", title: "[[#{HQPD_L_SUPPLY_PART_NO}]]"},//Supply Part No
+	    			{data: "MATERIAL_TEXT", title: "[[#{HQPD_L_DESCRIPTION}]]"},//Description
+	    			{data: "REQ_QTY", title: "[[#{HQPD_L_REQ_QTY}]]"},//Req Qty
+	    			{data: "KBETR", title: "[[#{HQPD_L_LIST_PRICE}]]", className: "right"},//List Price
+	    			{data: "NET_PRICE", title: "[[#{HQPD_L_NET_PRICE}]]", className: "right"},//Net Price
+	    			{data: "NET_VALUE", title: "[[#{HQPD_L_NET_VALUE}]]", className: "right"},//Net Value
+	    			{data: "AVAILABILITY", title: "[[#{HQPD_L_AVAILABILITY}]]"}//Available
 	    		],
 	    		columnDefs: [
 	    			{ className: "left", targets: "_all" },
@@ -148,7 +150,7 @@ $(function(){
 	});
 	
 	$("#BTN_pdfDownload").on("click", function() {
-		document.location.href = "/portal/corp/eu/scm/parts/order/display/pdf_download?orderNo=[[${orderNo}]]&mode=BT08";
+		document.location.href = "/portal/iv/hq/parts/domestic/order/display/pdf_download?orderNo=[[${orderNo}]]&mode=BT08";
 	});	
 	
 	$("#BTN_back").on("click", function() {
@@ -156,20 +158,20 @@ $(function(){
 	});
 	
 	$("#BTN_download").on("click", function() {
-		var gridFileDownload = new GridFileDownload($tableObj);
+		let gridFileDownload = new GridFileDownload($tableObj);
 		gridFileDownload.fileName = "inquiry_list";
 		gridFileDownload.excelDownload();
 	});
 	
 	$("#BTN_transfer").on("click", function() {
-		Popup.open("/portal/corp/eu/scm/parts/order/create/transfer_order", 500, 200);
+		Popup.open("/portal/iv/hq/parts/domestic/order/create/transfer_to_order", 500, 200);
 	});	
 });
 
 function doTransferOrder(orderType)
 {
 	$.ajax({
-		url: "/portal/corp/eu/scm/parts/order/create/transfer_order/save",
+		url: "/portal/iv/hq/parts/domestic/order/create/transfer_to_order/save",
 		method: "POST",
 		data: {"orderNo": "[[${orderNo}]]", "orderType": orderType},
 		beforeSend: function(jqXHR, settings)
@@ -178,16 +180,16 @@ function doTransferOrder(orderType)
 		},		
 	    success: function(response, textStatus, jqXHR) 
 	    {
-	    	var result = response.RESULT;
+	    	let result = response.RESULT;
 	    	
 	    	if (result.TYPE == "S")
 	    	{
-	    		var orderNo = result.SALESDOCUMENT_EX;
-	    		var message = "[[#{DIVEU_MSG_0005}]]".replace("{0}", orderNo);
+	    		let orderNo = result.SALESDOCUMENT_EX;
+	    		let message = "[[#{HQPD_M_ORDER_CREATED}]]".replace("{0}", orderNo);
 	    		
 	    		alert(message);
 	    		
-	    		document.location.href = "/portal/corp/eu/scm/parts/order/display/order_detail?orderNo=" + orderNo;
+	    		document.location.href = "/portal/iv/hq/parts/domestic/order/display/order_view?orderNo=" + orderNo;
 	    	}
 	    	else
 	    	{
